<resources>

    <string name="app_name">MaxPlayer</string>
    <string name="hello_world">Background Playback &#8230;</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_player">MaxPlayer</string>
    <string name="switch_orientation">Toggle orientation</string>
    <string name="switch_looping">repeat</string>

    <!-- dialog -->
    <string name="display_model_select">Change display model to XXX?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Menu -->
    <string name="about">about</string>
    <string name="pick">pick</string>
    <string name="dcd"></string>

    <!-- App widget -->
    <string name="widget_initial_text">Touch to launch MaxPlayer.</string>

    <!-- App widget2 -->
    <string name="accessibility_thumbsUp">accessibility_thumbsUp</string>
    <string name="accessibility_thumbsDown">accessibility_thumbsDown</string>
    <string name="accessibility_prev">accessibility_prev</string>
    <string name="accessibility_play">accessibility_play</string>
    <string name="accessibility_pause">accessibility_pause</string>
    <string name="accessibility_stop">accessibility_stop</string>
    <string name="accessibility_next">accessibility_next</string>
    <string name="appwidget_text_separator">-</string>
    
    <!--  Sliding menu -->
    <string name="slidingmenu_open">open</string>
    <string name="slidingmenu_repeat">repeat</string>
    <string name="slidingmenu_float_window">floating window</string>
    <string name="slidingmenu_about">about</string>

</resources>